--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,15 @@
     "description": "Frontend for Smart Campus Management System - Person A Modules",
     "private": true,
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.20.0",
         "axios": "^1.6.2",
-        "react-scripts": "5.0.1",
-        "recharts": "^2.10.3",
+        "date-fns": "^2.30.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-icons": "^4.12.0",
+        "react-router-dom": "^6.20.0",
+        "react-scripts": "^5.0.1",
         "react-toastify": "^9.1.3",
-        "date-fns": "^2.30.0"
+        "recharts": "^2.10.3"
     },
     "scripts": {
         "start": "react-scripts start",
